Fix text title getting truncated when there's enough space

--- a/src/components/contextualactionpanel/_contextualactionpanel.scss
+++ b/src/components/contextualactionpanel/_contextualactionpanel.scss
@@ -29,6 +29,20 @@
       .toolbar-section {
         &.title {
           padding-left: 15px;
+
+          span {
+            @media (min-width: $breakpoint-big-phone + 1) {
+              width: 150px;
+            }
+      
+            @media (min-width: $breakpoint-phablet + 1) {
+              width: 250px;
+            }
+
+            @media (max-width: $breakpoint-big-phone) {
+              display: none;
+            }
+          }
         }
       }
     }
